# Guider

./: .gitignore  .gitmodules  CMakeLists.txt  ELEMENTS.md  LICENSE  README.md
backends/: CMakeLists.txt
backends/sfml/: CMakeLists.txt  backend.cpp  backend.hpp
doc/: DoxyFile
examples/: CMakeLists.txt  README.md
examples/basic/: CMakeLists.txt  README.md
examples/basic/src/: main.cpp
examples/common-elements/: CMakeLists.txt
examples/common-elements/src/: main.cpp
examples/git-gui/: CMakeLists.txt
examples/git-gui/include/: git.hpp  paths.hpp.in
examples/git-gui/resources/: main_layout.xml
examples/git-gui/resources/layouts/: main.xml
examples/git-gui/resources/styles/: style.xml
examples/git-gui/src/: git.cpp  main.cpp
examples/sfml/: CMakeLists.txt  backend.cpp  backend.hpp  main.cpp
guider/: CMakeLists.txt
guider/include/guider/: base.hpp  components.hpp  containers.hpp  definitions.hpp  manager.hpp  parsing.hpp  shortcuts.hpp  styles.hpp
guider/src/: base.cpp  components.cpp  containers.cpp  definitions.cpp  manager.cpp  parsing.cpp  styles.cpp
guider/tests/: CMakeLists.txt  core.cpp
tools/backend/: CMakeLists.txt  backend.cpp
tools/guider-layout/: CMakeLists.txt
tools/guider-layout/include/: app.hpp
tools/guider-layout/resources/layouts/: main_layout.xml
tools/guider-layout/resources/styles/: common.xml  core.xml  main.xml
tools/guider-layout/resources/styles/defaults/: common.xml
tools/guider-layout/resources/themes/: main.xml
tools/guider-layout/src/: app.cpp  main.cpp
